// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main 1`] = `
{
  "account": {
    "number": "21005",
    "number_formatted": "x21005",
    "type": "card",
  },
  "transaction": {
    "amount": 948,
    "currency": "INR",
    "date": "Wed Dec 20 2023 00:02:00 GMT+0000 (India Standard Time)",
    "merchant": "PPSL RETAIL ",
    "type": "debit",
  },
}
`;

exports[`main 2`] = `
{
  "account": {
    "number": "21005",
    "number_formatted": "x21005",
    "type": "card",
  },
  "transaction": {
    "amount": 3536.46,
    "currency": "INR",
    "date": "Mon Dec 25 2023 12:53:00 GMT+0000 (India Standard Time)",
    "merchant": "MAXX",
    "type": "debit",
  },
}
`;
